# risk-analysis

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/api/: routes.py  server.py
backend/src/factory/models/: xgboost_model.pkl
backend/src/usecase/predict_usecase/: __init__.py
backend/src/usecase/train_usecase/: __init__.py  dtos.py
docs/: predict_request_payload.json
notebooks/: Experiments.ipynb  XGBoostExperiment.ipynb  dataset_creation.ipynb
notebooks/.ipynb_checkpoints/: Experiments-checkpoint.ipynb  XGBoostExperiment-checkpoint.ipynb
risk-analizer-frontend/: Gemfile
risk-analizer-frontend/app/controllers/: risks_controller.rb
risk-analizer-frontend/app/models/: RiskScoreRequest.rb
risk-analizer-frontend/app/views/layouts/: application.html.erb
risk-analizer-frontend/app/views/pwa/: manifest.json.erb
risk-analizer-frontend/app/views/risks/: index.html.erb  new.html.erb  show.html.erb
risk-analizer-frontend/config/: application.rb  cable.yml  credentials.yml.enc  routes.rb
risk-analizer-frontend/config/environments/: production.rb
src/factory/: preditc.py  train.py
src/factory/models/: scaler_model.pkl
src/usecase/predict_usecase/: dtos.py
