[tool.poetry]
name = "financial-risk"
version = "0.1.0"
description = ""
authors = ["tsujjii <warmling.adriano760@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
scipy = "^1.14.1"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
